[gd_scene load_steps=9 format=3 uid="uid://j06lccf2epf6"]

[ext_resource type="Script" path="res://main.gd" id="1_h78nx"]
[ext_resource type="PackedScene" uid="uid://b2m18svqsf5gc" path="res://player.tscn" id="1_m3sxg"]
[ext_resource type="PackedScene" uid="uid://dmthlmptagbpq" path="res://mob.tscn" id="2_0y7te"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xnaaa"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_bcnur"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58aig"]
albedo_color = Color(0.774222, 0.393182, 0.150729, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_tiyjo"]
material = SubResource("StandardMaterial3D_58aig")

[sub_resource type="Curve3D" id="Curve3D_6k1nx"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -14.0726, 0, -13.7022, 0, 0, 0, 0, 0, 0, 14.0726, 0, -14.0197, 0, 0, 0, 0, 0, 0, 13.9668, 0, 15.1836, 0, 0, 0, 0, 0, 0, -13.9668, 0, 15.1836, 0, 0, 0, 0, 0, 0, -14.0726, 0, -13.7022),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_h78nx")
mob_scene = ExtResource("2_0y7te")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_xnaaa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_bcnur")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 17, 0)
shadow_enabled = true

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0

[node name="Player" parent="." instance=ExtResource("1_m3sxg")]

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -14)
mesh = SubResource("CylinderMesh_tiyjo")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -14)
mesh = SubResource("CylinderMesh_tiyjo")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 15)
mesh = SubResource("CylinderMesh_tiyjo")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 15)
mesh = SubResource("CylinderMesh_tiyjo")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_6k1nx")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.0112774, 0, -0.999936, 0, 1, 0, 0.999936, 0, 0.0112774, -14.0726, 0, -13.7022)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
